--- a/biblioteca/demo/docker-compose.yml
+++ b/biblioteca/demo/docker-compose.yml
@@ -13,5 +13,16 @@ services:
       - mysql_data:/var/lib/mysql
       - ./initMysql.sql:/docker-entrypoint-initdb.d/initMysql.sql
     command: --default-authentication-plugin=mysql_native_password
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:latest
+    container_name: phpmyadmin
+    restart: always
+    environment:
+      PMA_HOST: mysql
+      PMA_PORT: 3306
+      PMA_ARBITRARY: 1
+    ports:
+      - "8080:80"
 volumes:
   mysql_data:
